--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<h1>Write a HTML code to achieve the layout shown in image below</h1>
 	<img src="https://storage.googleapis.com/acciojob-open-file-collections/welcome.png"></img>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
